# Eyece

./: .travis.yml  Cargo.toml
src/: main.rs  stream.rs
src/eye/: connection.rs  mod.rs  subscription.rs  util.rs
src/model/: control.rs  device.rs  format.rs  log.rs  mod.rs
