[package]
name = "eyece"
version = "0.1.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"

[dependencies]
eye = { git = "https://github.com/raymanfx/eye-rs", features = ["hal-openpnp"], rev = "99ac5d79" }
ffimage = "0.8.1"
iced = { git = "https://github.com/hecrj/iced", features = ["image", "tokio"], rev = "bbc6e91" }
iced_futures = { git = "https://github.com/hecrj/iced", rev = "bbc6e91" }
