[package]
name = "eyece"
version = "0.1.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"

[dependencies]
eye = { git = "https://github.com/raymanfx/eye-rs", features = ["hal-openpnp"], rev = "99ac5d79" }
ffimage = "0.8.1"
iced = { version = "0.2", features = ["image"] }
iced_futures = "0.2"
